fix jenkinfile